--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Escalex - Dashboard Power BI</title>
+  <title>Escalex - Monitoramento</title>
   <style>
     body {
       margin: 0;
@@ -12,18 +12,42 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100vh;
     }
-    h1 {
+    header {
+      width: 100%;
+      background: #004080;
+      color: white;
       text-align: center;
-      color: #333;
+      padding: 15px 0;
+    }
+    header img {
+      height: 60px;
+    }
+    nav {
+      margin: 20px;
+    }
+    nav button {
+      background: #0078d7;
+      border: none;
+      color: white;
+      padding: 12px 24px;
+      margin: 10px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    nav button:hover {
+      background: #005a9e;
     }
     .iframe-container {
       position: relative;
       width: 90%;
       max-width: 1200px;
       padding-top: 56.25%; /* Proporção 16:9 */
+      display: none;
     }
     .iframe-container iframe {
       position: absolute;
@@ -35,12 +59,46 @@
       border-radius: 8px;
       box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
     }
+    .active {
+      display: block;
+    }
   </style>
 </head>
 <body>
-  <h1>Escalex - Dashboard Interativo</h1>
-  <div class="iframe-container">
-    <iframe title="Escalex" src="https://app.powerbi.com/view?r=eyJrIjoiMmQ1MmYwY2MtZmZhNS00N2ZjLWEwYjctZjhjODczMWUwN2QwIiwidCI6IjQ4YWFmOTY3LTE3MjAtNDY2ZC04M2Y0LTJiOTAxOWRhNTg0ZiJ9" allowFullScreen="true"></iframe>
+  <header>
+    <img src="logo.png" alt="Logo Escalex">
+    <h1>Escalex - Monitoramento</h1>
+  </header>
+
+  <nav>
+    <button onclick="showFrame('dashboard')">Dashboard</button>
+    <button onclick="showFrame('relatorio')">Relatório</button>
+  </nav>
+
+  <!-- Power BI -->
+  <div id="dashboard" class="iframe-container active">
+    <iframe title="Escalex" 
+      src="https://app.powerbi.com/view?r=eyJrIjoiMmQ1MmYwY2MtZmZhNS00N2ZjLWEwYjctZjhjODczMWUwN2QwIiwidCI6IjQ4YWFmOTY3LTE3MjAtNDY2ZC04M2Y0LTJiOTAxOWRhNTg0ZiJ9" 
+      allowFullScreen="true">
+    </iframe>
   </div>
+
+  <!-- Gamma -->
+  <div id="relatorio" class="iframe-container">
+    <iframe src="https://gamma.app/embed/a7gddjnv9dldb34" 
+      style="width: 100%; height: 100%;" 
+      allow="fullscreen" 
+      title="Relatório de Monitoramento do Aplicativo Escalex">
+    </iframe>
+  </div>
+
+  <script>
+    function showFrame(id) {
+      document.querySelectorAll('.iframe-container').forEach(div => {
+        div.classList.remove('active');
+      });
+      document.getElementById(id).classList.add('active');
+    }
+  </script>
 </body>
 </html>
