--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo Escalex">
+    <img src="logotipo.png" alt="Logo Escalex">
     <h1>Escalex - Monitoramento</h1>
   </header>
 
