--- a/index.html
+++ b/index.html
@@ -3,84 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DGMCG - Portal</title>
+  <title>Portal DGMCG</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
       margin: 0;
-      background-color: #f4f4f9;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f8f9fc;
+      color: #333;
     }
     header {
-      background-color: #003366;
+      background-color: #002147;
       color: white;
-      padding: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 40px;
     }
     header img {
-      max-height: 80px;
+      max-height: 60px;
     }
-    .container {
-      margin-top: 50px;
-    }
-    button {
-      margin: 15px;
-      padding: 15px 30px;
-      font-size: 18px;
-      border: none;
-      border-radius: 8px;
-      background-color: #003366;
+    nav a {
       color: white;
-      cursor: pointer;
-      transition: background 0.3s;
+      text-decoration: none;
+      margin-left: 20px;
+      font-size: 18px;
+      font-weight: bold;
     }
-    button:hover {
-      background-color: #0055aa;
+    nav a:hover {
+      text-decoration: underline;
     }
-    iframe {
-      margin-top: 20px;
-      width: 90%;
-      height: 600px;
-      border: none;
-      display: none;
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+      background: linear-gradient(135deg, #004080, #0059b3);
+      color: white;
     }
-  </style>
-</head>
-<body>
-
-  <header>
-    <img src="LOGO DGMCG.png" alt="Logo DGMCG">
-    <h1>Portal da DGMCG</h1>
-  </header>
-
-  <div class="container" id="menu">
-    <h2>Selecione uma opção</h2>
-    <button onclick="mostrarDashboard()">Dashboard</button>
-    <button onclick="mostrarRelatorio()">Relatório</button>
-  </div>
-
-  <!-- Iframes ocultos -->
-  <iframe id="dashboard" src="https://app.powerbi.com/view?r=SEU_LINK_AQUI" title="Dashboard Power BI"></iframe>
-  <iframe id="relatorio" src="https://gamma.app/embed/a7gddjnv9dldb34" title="Relatório Gamma"></iframe>
-
-  <script>
-    // Proteção com senha
-    const senha = "dgmcg@2025";
-    let tentativa = prompt("Digite a senha para acessar o portal:");
-
-    if (tentativa !== senha) {
-      document.body.innerHTML = "<h1 style='color:red; text-align:center; margin-top:50px;'>Acesso Negado</h1>";
+    .hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
     }
-
-    // Exibir iframes
-    function mostrarDashboard() {
-      document.getElementById('dashboard').style.display = "block";
-      document.getElementById('relatorio').style.display = "none";
+    .hero p {
+      font-size: 1.2em;
+      max-width: 800px;
+      margin: 0 auto;
     }
-    function mostrarRelatorio() {
-      document.getElementById('dashboard').style.display = "none";
-      document.getElementById('relatorio').style.display = "block";
+    .content {
+      max-width: 1000px;
+      margin: 50px auto;
+      padding: 20px;
+      text-align: center;
     }
-  </script>
-
-</body>
-</html>
+    .content h2 {
+      font-size: 2em;
+      margin-bottom: 20px;
+      color: #002147;
+    }
+    .content p {
+      font-size: 1.1em;
+      line-height: 1.6;
+      margin-bottom: 40px;
+    }
+    .organograma img {
+      max-width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+    }
+    footer {
+      background-color: #002147;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+  </s
