--- a/index.html
+++ b/index.html
@@ -76,4 +76,42 @@
       padding: 15px;
       margin-top: 40px;
     }
-  </s
+  </style>
+</head>
+<body>
+
+  <header>
+    <img src="LOGO DGMCG.png" alt="Logo DGMCG">
+    <nav>
+      <a href="escalex.html">Escalex</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Diretoria Geral de Monitoramento dos Contratos de Gestão</h1>
+    <p>
+      A DGMCG é responsável pelo acompanhamento, fiscalização e monitoramento da execução dos Contratos de Gestão firmados pela Secretaria Estadual de Saúde de Pernambuco, 
+      garantindo transparência, eficiência e qualidade na aplicação dos recursos públicos e na prestação dos serviços de saúde à população.
+    </p>
+  </section>
+
+  <section class="content">
+    <h2>Nosso Papel</h2>
+    <p>
+      Atuamos no monitoramento sistemático das Organizações Sociais de Saúde (OSS), com foco em assegurar que as metas assistenciais e administrativas sejam cumpridas,
+      promovendo qualidade, segurança do paciente e eficiência na gestão hospitalar. A DGMCG desempenha papel estratégico na integração entre a gestão pública e as unidades
+      de saúde, fortalecendo a governança e a tomada de decisão baseada em dados.
+    </p>
+
+    <div class="organograma">
+      <h2>Organograma DGMCG</h2>
+      <img src="Organograma DGMCG (sem nomes).png" alt="Organograma da DGMCG">
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 - Diretoria Geral de Monitoramento dos Contratos de Gestão (DGMCG)</p>
+  </footer>
+
+</body>
+</html>
