--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
       margin-top: 40px;
     }
   </style>
+  <script>
+    // Solicita senha ao carregar a página
+    document.addEventListener("DOMContentLoaded", function () {
+      const senhaCorreta = "dgmcg@2025";
+      let senha = prompt("Digite a senha para acessar o Portal DGMCG:");
+      if (senha !== senhaCorreta) {
+        alert("Senha incorreta! Acesso negado.");
+        window.location.href = "https://www.google.com"; // Redireciona caso a senha esteja errada
+      }
+    });
+  </script>
 </head>
 <body>
 
@@ -112,14 +123,6 @@
   <footer>
     <p>&copy; 2025 - Diretoria Geral de Monitoramento dos Contratos de Gestão (DGMCG)</p>
   </footer>
- <script>
-    // Proteção com senha
-    const senha = "dgmcg@2025";
-    let tentativa = prompt("Digite a senha para acessar o portal:");
 
-    if (tentativa !== senha) {
-      document.body.innerHTML = "<h1 style='color:red; text-align:center; margin-top:50px;'>Acesso Negado</h1>";
-    }
-</script>
 </body>
 </html>
