--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
   <header>
     <img src="LOGO DGMCG.png" alt="Logo DGMCG">
     <nav>
+      <a href="index.html">Início</a>
       <a href="escalex.html">Escalex</a>
+      <a href="dashboards.html">Dashboards</a>
     </nav>
   </header>
 
