--- a/escalex.html
+++ b/escalex.html
@@ -63,23 +63,17 @@
       display: block;
     }
   </style>
-  <script>
-  (function(){
-    const KEY="dgmcg_aut", PASS="dgmcg@2025";
-    try {
-      const ok = sessionStorage.getItem(KEY) === PASS; // troque por localStorage se preferir persistir
-      if (!ok) {
-        // monta o parâmetro next com o caminho relativo atual
-        const path = location.pathname.split("/").pop() || "index.html";
-        const qs = location.search ? encodeURIComponent(location.search) : "";
-        location.href = `index.html?next=${path}${qs ? decodeURIComponent(qs) : ""}`;
-      }
-    } catch(e){
-      // fallback: se storage falhar por algum motivo, manda para a home
-      location.href = "index.html";
-    }
-  })();
-</script>
+   <script>
+    // Solicita senha ao carregar a página
+    document.addEventListener("DOMContentLoaded", function () {
+      const senhaCorreta = "dgmcg@2025";
+      let senha = prompt("Digite a senha para acessar o Portal DGMCG:");
+      if (senha !== senhaCorreta) {
+        alert("Senha incorreta! Acesso negado.");
+        window.location.href = "https://www.google.com"; // Redireciona caso a senha esteja errada
+      }
+    });
+  </script>
 </head>
 <body>
   <header>
