--- a/index.html
+++ b/index.html
@@ -77,7 +77,17 @@
       margin-top: 40px;
     }
   </style>
-  
+  <script>
+    // Solicita senha ao carregar a página
+    document.addEventListener("DOMContentLoaded", function () {
+      const senhaCorreta = "dgmcg@2025";
+      let senha = prompt("Digite a senha para acessar o Portal DGMCG:");
+      if (senha !== senhaCorreta) {
+        alert("Senha incorreta! Acesso negado.");
+        window.location.href = "https://www.google.com"; // Redireciona caso a senha esteja errada
+      }
+    });
+  </script>
 </head>
 <body>
 
@@ -85,8 +95,8 @@
     <img src="LOGO DGMCG.png" alt="Logo DGMCG">
     <nav>
       <a href="index.html">Início</a>
+      <a href="escalex.html">Escalex</a>
       <a href="dashboards.html">Dashboards</a>
-      <a href="escalex.html">Escalex</a>
     </nav>
   </header>
 
