--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
   <header>
-    <img src="assets/logo dgmcg.png" alt="Logo DGMCG" />
+    <img src="assets/LOGO DGMCG.png" alt="Logo DGMCG" />
     <nav>
       <a href="index.html">Início</a>
       <a href="escalex.html">Escalex</a>
