--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <section class="card">
       <h2>Organograma DGMCG</h2>
       <div class="organograma">
-        <img src="assets/organograma dgmcg (sem nomes).png" alt="Organograma DGMCG" />
+        <img src="assets/Organograma DGMCG (sem nomes).png" alt="Organograma DGMCG" />
       </div>
     </section>
   </main>
