--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
   <header>
-    <img src="assets/LOGO DGMCG.png" alt="Logo DGMCG" />
+    <img src="assets/DGMCG.png" alt="Logo DGMCG" />
     <nav>
       <a href="index.html">Início</a>
       <a href="escalex.html">Escalex</a>
@@ -117,7 +117,7 @@
     <section class="card">
       <h2>Organograma DGMCG</h2>
       <div class="organograma">
-        <img src="assets/Organograma DGMCG (sem nomes).png" alt="Organograma DGMCG" />
+        <img src="assets/ORGDGMCG.png" alt="Organograma DGMCG" />
       </div>
     </section>
   </main>
