--- a/dashboards.html
+++ b/dashboards.html
@@ -52,7 +52,7 @@
 <body>
   <header>
     <div class="brand">
-      <img src="assets/logo-dgmcg.png" alt="Logo DGMCG"/>
+      <img src="DGMCG.png" alt="Logo DGMCG"/>
       <strong>DGMCG — Dashboards</strong>
     </div>
     <nav>
