--- a/index.html
+++ b/index.html
@@ -126,5 +126,71 @@
     &copy; 2025 — Diretoria Geral de Monitoramento dos Contratos de Gestão (DGMCG)
   </footer>
 
+<!-- Degeminho NotebookLM -->
+<div id="degeminho" style="position:fixed; bottom:20px; right:20px; width:300px; height:40px; background:#004080; color:white; border-radius:12px 12px 0 0; box-shadow:0 4px 12px rgba(0,0,0,0.3); font-family:sans-serif; z-index:1000;">
+  <div style="display:flex; justify-content:space-between; align-items:center; padding:5px 10px; cursor:pointer;">
+    <span>Degeminho</span>
+    <div>
+      <button id="minimizeBtn" style="background:#0059b3; color:white; border:none; padding:3px 6px; border-radius:4px; margin-right:4px; cursor:pointer;">_</button>
+      <button id="halfBtn" style="background:#0059b3; color:white; border:none; padding:3px 6px; border-radius:4px; margin-right:4px; cursor:pointer;">[ ]</button>
+      <button id="fullBtn" style="background:#0059b3; color:white; border:none; padding:3px 6px; border-radius:4px; cursor:pointer;">⤢</button>
+    </div>
+  </div>
+  <div id="degeminhoContent" style="display:none; width:100%; height:calc(50vh - 40px);">
+    <iframe src="https://notebooklm.google.com/notebook/e3569581-4f89-4fad-bb4c-b6ffd4d9ad48"
+            title="NotebookLM"
+            style="width:100%; height:100%; border:none; border-radius:0 0 12px 12px;"
+            allowfullscreen>
+    </iframe>
+  </div>
+</div>
+
+<script>
+  const degeminho = document.getElementById("degeminho");
+  const content = document.getElementById("degeminhoContent");
+  const minimizeBtn = document.getElementById("minimizeBtn");
+  const halfBtn = document.getElementById("halfBtn");
+  const fullBtn = document.getElementById("fullBtn");
+
+  // Inicial: minimizado
+  content.style.display = "none";
+  degeminho.style.height = "40px";
+  degeminho.style.width = "300px";
+
+  // Minimizar
+  minimizeBtn.onclick = () => {
+    content.style.display = "none";
+    degeminho.style.height = "40px";
+    degeminho.style.width = "300px";
+  }
+
+  // Metade da tela
+  halfBtn.onclick = () => {
+    content.style.display = "block";
+    degeminho.style.width = "50vw";
+    degeminho.style.height = "50vh";
+  }
+
+  // Tela cheia
+  fullBtn.onclick = () => {
+    content.style.display = "block";
+    degeminho.style.width = "100vw";
+    degeminho.style.height = "100vh";
+  }
+
+  // Clique na barra abre ou fecha se estiver minimizado
+  degeminho.querySelector("span").onclick = () => {
+    if(content.style.display === "none"){
+      content.style.display = "block";
+      degeminho.style.height = "50vh";
+    } else {
+      content.style.display = "none";
+      degeminho.style.height = "40px";
+      degeminho.style.width = "300px";
+    }
+  }
+</script>
+
+  
 </body>
 </html>
