--- a/index.html
+++ b/index.html
@@ -126,75 +126,37 @@
     &copy; 2025 — Diretoria Geral de Monitoramento dos Contratos de Gestão (DGMCG)
   </footer>
 
-<!-- Degeminho NotebookLM (pop-up) -->
-<div id="degeminho" style="position:fixed; bottom:20px; right:20px; width:200px; height:40px; background:#004080; color:white; border-radius:12px 12px 0 0; box-shadow:0 4px 12px rgba(0,0,0,0.3); font-family:sans-serif; z-index:1000;">
-  <div style="display:flex; justify-content:space-between; align-items:center; padding:5px 10px; cursor:pointer;">
-    <span>Degeminho</span>
-    <div>
-      <button id="minimizeBtn" style="background:#0059b3; color:white; border:none; padding:3px 6px; border-radius:4px; margin-right:4px; cursor:pointer;">_</button>
-      <button id="halfBtn" style="background:#0059b3; color:white; border:none; padding:3px 6px; border-radius:4px; margin-right:4px; cursor:pointer;">[ ]</button>
-      <button id="fullBtn" style="background:#0059b3; color:white; border:none; padding:3px 6px; border-radius:4px; cursor:pointer;">⤢</button>
-    </div>
+<!-- Degeminho NotebookLM (pop-up tela cheia) -->
+<div id="degeminho" 
+     style="position:fixed; bottom:20px; right:20px; width:250px; height:auto; background:#004080; color:white; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.3); font-family:sans-serif; z-index:1000; padding:8px;">
+  <div style="cursor:pointer; text-align:center;">
+    <span style="font-weight:bold; font-size:16px;">Degeminho</span><br>
+    <span style="font-size:12px; font-weight:normal; color:#cce0ff;">
+      seu assistente virtual para tirar dúvidas sobre a lei das OSS
+    </span>
+  </div>
+  <div style="text-align:center; margin-top:8px;">
+    <button id="fullBtn" 
+            style="background:#0059b3; color:white; border:none; padding:6px 12px; border-radius:6px; cursor:pointer; font-weight:bold;">
+      Abrir NotebookLM
+    </button>
   </div>
 </div>
 
 <script>
-  const degeminho = document.getElementById("degeminho");
-  const minimizeBtn = document.getElementById("minimizeBtn");
-  const halfBtn = document.getElementById("halfBtn");
   const fullBtn = document.getElementById("fullBtn");
   const notebookURL = "https://notebooklm.google.com/notebook/e3569581-4f89-4fad-bb4c-b6ffd4d9ad48";
 
-  let popUpWindow = null;
-
-  // Minimizar: apenas fecha pop-up se estiver aberto
-  minimizeBtn.onclick = () => {
-    if(popUpWindow && !popUpWindow.closed){
-      popUpWindow.close();
-    }
-    degeminho.style.width = "200px";
-    degeminho.style.height = "40px";
-  }
-
-  // Abrir metade da tela
-  halfBtn.onclick = () => {
-    if(popUpWindow && !popUpWindow.closed){
-      popUpWindow.focus();
-    } else {
-      const width = window.innerWidth / 2;
-      const height = window.innerHeight / 2;
-      popUpWindow = window.open(notebookURL, "Degeminho", `width=${width},height=${height},resizable=yes,scrollbars=yes`);
-    }
-    degeminho.style.width = "300px";
-    degeminho.style.height = "60px";
-  }
-
-  // Abrir tela cheia
   fullBtn.onclick = () => {
-    if(popUpWindow && !popUpWindow.closed){
-      popUpWindow.focus();
-      popUpWindow.resizeTo(screen.width, screen.height);
-      popUpWindow.moveTo(0,0);
-    } else {
-      popUpWindow = window.open(notebookURL, "Degeminho", `width=${screen.width},height=${screen.height},resizable=yes,scrollbars=yes`);
-    }
-    degeminho.style.width = "300px";
-    degeminho.style.height = "60px";
-  }
-
-  // Clique no título também abre metade da tela
-  degeminho.querySelector("span").onclick = () => {
-    if(!popUpWindow || popUpWindow.closed){
-      const width = window.innerWidth / 2;
-      const height = window.innerHeight / 2;
-      popUpWindow = window.open(notebookURL, "Degeminho", `width=${width},height=${height},resizable=yes,scrollbars=yes`);
-    } else {
-      popUpWindow.focus();
-    }
-    degeminho.style.width = "300px";
-    degeminho.style.height = "60px";
+    // Abrir NotebookLM em tela cheia (nova janela)
+    window.open(
+      notebookURL, 
+      "Degeminho", 
+      `width=${screen.width},height=${screen.height},top=0,left=0,resizable=yes,scrollbars=yes`
+    );
   }
 </script>
+
 
 
   
