--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <div style="text-align:center; margin-top:8px;">
     <button id="fullBtn" 
             style="background:#0059b3; color:white; border:none; padding:6px 12px; border-radius:6px; cursor:pointer; font-weight:bold;">
-      Abrir NotebookLM
+      Abrir Chat
     </button>
   </div>
 </div>
