--- a/dashboards.html
+++ b/dashboards.html
@@ -59,6 +59,7 @@
       <a href="index.html">Início</a>
       <a href="escalex.html">Escalex</a>
       <a href="dashboards.html">Dashboards</a>
+      <a href="Sistema_de_Gestao.html">Sistema de Gestão</a>
     </nav>
   </header>
 
