--- a/Sistema_de_Gestao.html
+++ b/Sistema_de_Gestao.html
@@ -80,7 +80,7 @@
       <a href="index.html">Início</a>
       <a href="escalex.html">Escalex</a>
       <a href="dashboards.html">Dashboards</a>
-      <a href="sistema-de-gestao.html">Sistema de Gestão</a>
+      <a href="Sistema_de_Gestao.html">Sistema de Gestão</a>
     </nav>
   </header>
 
