--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <a href="index.html">Início</a>
       <a href="escalex.html">Escalex</a>
       <a href="dashboards.html">Dashboards</a>
-      <a href="Sistema_de_Gestao.html">Sistema de Gestão</a>
+      <a href="sistema_de_gestao.html">Sistema de Gestão</a>
     </nav>
   </header>
 
