--- a/dashboards.html
+++ b/dashboards.html
@@ -44,7 +44,7 @@
       let senha = prompt("Digite a senha para acessar o Portal DGMCG:");
       if (senha !== senhaCorreta) {
         alert("Senha incorreta! Acesso negado.");
-        window.location.href = "https://www.google.com"; // Redireciona caso a senha esteja errada
+        window.location.href = "https://www.dgmcg.com.br"; // Redireciona caso a senha esteja errada
       }
     });
   </script>
@@ -59,7 +59,7 @@
       <a href="index.html">Início</a>
       <a href="escalex.html">Escalex</a>
       <a href="dashboards.html">Dashboards</a>
-      <a href="Sistema_de_Gestao.html">Sistema de Gestão</a>
+      <a href="sistema_de_gestao.html">Sistema de Gestão</a>
     </nav>
   </header>
 
